app/assets/stylesheets/application.scss
/* ... */
.nav-heading-darker {
  background-color:#dddddd;
  padding: 10px;
  margin: 0px 0px 5px 0px;
}

.filter-button {
  color: #ffffff;
  background-color: $grey-blue;

  &:hover {
    background-color: $blue !important;
  }
}

.facet-count {
  float: right;
  color: #999;
}

.show-page-description {
  font-size: medium;
  padding: 50px 0;
}

.tiny-content-provider-logo {
  max-width: 32px;
  border-radius: 2px;
  padding-left: 5px;
}

.small-content-provider-logo {
  max-width: 64px;
  border-radius: 4px;
  padding-left: 10px;
}

.medium-content-provider-logo {
  max-width: 98%;
  //border-radius: 5px;
  margin: 0px 10px 0px 0px;
}

.search-results-count {
  font-size: medium;
  font-weight: bold;
  margin-top: 5px;
  padding-top: 5px;
  padding-bottom: 10px;
}

.welcome-text {
  padding: 20px;
  text-align: center;
}

.panel-heading {
  display: block;
}

.panel-title {
  font-size: 13px;
  color: #005d7a;
}

.panel-title a {
  text-decoration: none;
  color: #005d7a;
}

.panel-heading .accordion-toggle:after {
  /* symbol for "opening" panels */
  font-family: 'Glyphicons Halflings'; /* essential for enabling glyphicon */
  content: "\e113"; /* adjust as needed, taken from bootstrap.css */
  float: right; /* adjust as needed */
}

.panel-heading .accordion-toggle.collapsed:after {
  /* symbol for "collapsed" panels */
  content: "\e114"; /* adjust as needed, taken from bootstrap.css */
}

.panel-body {
  padding-bottom: 0px;
}

.h1, .h2, .h3, .h4, .h5, .h6 {
  color: #337ab7;
}

.content_action {
  float: right;
  margin-top: -5px;
  margin-right: -7px;
}

// Fix for simple form issue: http://stackoverflow.com/questions/6748446/rails-simple-form-gives-dots-under-stars-for-required-fields-better-way-to-remo
abbr, accronym {
  border-bottom: 0px !important;
}

/*try adding !important  after 0px if doesn't work*/

//Multiple input list on forms with + button to add more input fields dynamically
.multiple-input-list {
  display: flex;
  flex-wrap: wrap;
}

.multiple-list-item {
  padding: 3px;
  margin: 3px 3px 3px 0px;
  background-color: whitesmoke;
  border-radius: 4px;
  width: 43%;
  display: inline;
}

.multiple-input {
  width: 85%;
  display: inline;
}

.multiple-input-delete {
  background: none;
  border: none
}

.dropdown-option {
  cursor: pointer;

  &:hover {
    background: $dropdown-link-hover-bg;
  }
}

.dropdown-option-delete {
  background: none;
  border: none
}

.info-block {
  color: #005d7a;
  float: right;
  font-size: 20px;
  margin: 0px;
  width: 28px;
}

/* The max width is dependant on the container (more info below) */
.popover {
  max-width: 500px !important; /* Max Width of the popover (depending on the container!) */
}

// To make bootstrap button wrap button text into multiple lines
.btn {
  white-space: normal !important;
}

// Override margin for boostrap-s page-header
.page-header {
  margin: 20px 0 20px;
}

.keyword-pill {
  color: #ffffff;
  background-color: $grey-blue;
  margin-bottom: 5px;
  display: inline-block;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  touch-action: manipulation;
  background-image: none;
  border: 1px solid transparent;
  white-space: normal !important;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857143;
  border-radius: 4px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

// Vertically aligned
.vertical-align {
  display: flex;
  flex-direction: row;
}

.vertical-align > [class^="col-"],
.vertical-align > [class*=" col-"] {
  display: flex;
  align-items: center; /* Align the flex-items vertically */
  //justify-content: center; /* Optional, to align inner flex-items horizontally within the column  */
}

ul.featureblocks {
  padding: 10px 0;
  margin: 0 -10px;
  list-style: none;
  overflow: auto;

  li {
    float: left;
    width: 20%;
    padding: 0 12px;
    border-right: 1px dotted #ccc;
    &:last-child {
      border: none;
    }
    @media (max-width: $screen-md) {
      width: 50%;
      border-right: none;
      margin-bottom: 10px;
    }
    h2 {
      margin-top: 10px;
      font-size: 20px;
      line-height: 24px;
      font-weight: normal
    }
    a {
      color: #444;
    }
    p {
      margin: 5px 0;
    }
  }
}

.searchbox {
  width: 85%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  margin-bottom: 5px;
  padding: 20px;
  background-color: #efefef;
  position: relative;
  box-shadow: 0 0 5px #333;
  -webkit-box-shadow: 0 0 5px #333;
  -moz-box-shadow: 0 0 5px #333;
  -webkit-border-radius: 3px !important;
  -moz-border-radius: 3px !important;
  border-radius: 3px !important;
  text-align: center;
}

.homepage #sb-search {
  background-color: transparent;
  padding: 0;
}

sup {
  vertical-align: top;
  position: relative;
  top: 5px;
}

.announcement {
  color: #333333;
  border: 1px solid #DDD;
  background: #FFFFCC;
  padding: 0.3em 0.6em;
  margin-bottom: 1em;
  line-height: 1.7;
}

#front-page-announcement {
  font-size: 120%;
  font-weight: bold;
  text-align: center;
  margin: 5px 10px 0px 10px;
}

#flash-container{
  text-align: center;
}

.schemaorg-element {
  display: none
}

.responsive-search-box {
  float: right;
  width: 300px;
  @include xs {
    float: none;
    width: 100%;
    margin-bottom: 10px;
  }
}

.info-box {
  .info-box-header {
    padding: 10px;
    background-color: #F6F6F6;
    border-radius: 4px;
  }
  .info-box-content {
    margin-top: 10px;
  }
}

.muted {
  color: #999;
}

.preview-image {
  margin: 0 10px 10px 0;
  border: 1px solid #ccc;
  float: left;

  > img {
    width: 100px;
    max-height: 150px;
  }
}

.bounding-box {
  padding: 19px;
  margin-bottom: 20px;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
}

.info-icon{
  font-size: 24px;
}
.info-icon-small{
  font-size: 16px;
}
.info-icon-large{
  font-size: 48px;
}

.gap {
  padding: 0px 5px;
}
/* ... */

